scripts/nullaway/nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8.txt
../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/device/bathroom/HairDryer.java:20: error: [NullAway] initializer method does not guarantee @NonNull field mode (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HairDryer(int windSpeed) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url0f7f8f6435_TimmiTBy_Epam_tgz-pJ8-com_epam_electricalappliance_RunnerJ8/src/com/epam/electricalappliance/utilsfordevices/Sort.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
